# peer-file-sharing

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  bencode.c  bencode.h  bencode_parser.c  bencode_parser.h  client.c  helper.c  helper.h  main.c  network.c  network.h  peer_communication.h  temp.c  tracker_communication.c  tracker_communication.h  valgrind_start.sh
installations/: BitTorrent.md  Installed software.md  Roadmap.canvas  Sources.md  TODO.md
installations/.obsidian/: workspace.json
installations/Daily log/: Day 1 - 08.07.2024.md
src/: bencode.c  bencode.h  helper.c  main.c  network.c  peer_communication.c  temp.c  tracker_communication.c
src/headers/: bencode.h
